translated to english finished

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="navBar_Desktop">
         <ul class="linksMenu">
           <li><a href="#navBar">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#about_heading">About</a></li>
+          <li><a href="#projects_heading">Projects</a></li>
           <li><a class="contactMeBtn" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -33,8 +33,8 @@
           </button>
           <ul class="linksMenu">
             <li><a href="#hero">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about_heading">About</a></li>
+            <li><a href="#projects_heading">Projects</a></li>
             <li><a class="contactMeBtn" href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -47,8 +47,8 @@
       <section id="hero">
         <div class="heroContent">
           <div class="heroText">
-            <div class="heroTitle">
-              Miguel Arenas <small>Licenciado en Administración</small>
+            <div class="heroTitle" id="hero_heading">
+              Miguel Arenas <small>Bachelor's degree in Business Administration (UBA)</small>
               <small>FullStack Web Developer</small>
             </div>
             <div class="separator"></div>
@@ -67,7 +67,7 @@
         </div>
       </section>
       <section id="about">
-        <div class="about_heading">
+        <div class="about_heading" id="about_heading">
           <h2 class="headingTwo">About</h2>
           <div class="separator"></div>
         </div>
@@ -135,8 +135,8 @@
         </div>
       </section>
       <section id="projects">
-        <div class="projects_heading">
-          <h2 class="headingThree">Projects</h2>
+        <div class="projects_heading" >
+          <h2 class="headingThree" id="projects_heading">Projects</h2>
           <div class="separator"></div>
         </div>
         <div class="projectsGrid">
@@ -326,20 +326,16 @@
                 </div>
               </div>
               <div class="project_textContent">
-                <div class="cardHeading">Portafolio para Actriz</div>
+                <div class="cardHeading">Portfolio for Actress</div>
                 <div class="separator"></div>
                 <div class="cardBody">
                   <p>
-                    Un viaje a través del arte y la actuación. Explora el
-                    fascinante mundo de Alejandra en su portafolio interactivo.
+                   A journey through art and acting. Explore the fascinating world of Alejandra in her Portfolio.
+                  <p>
+                    Find out how we combine HTML, CSS, JS and Bootstrap to bring her online presence to life.
                   </p>
                   <p>
-                    Descubre cómo combinamos HTML, CSS, JS y Bootstrap para dar
-                    vida a su presencia en línea.
-                  </p>
-                  <p>
-                    Diseñado para brillar en dispositivos móviles, tabletas y
-                    computadoras de escritorio.
+                    Mobile-first design and adapted for tablets and desktop devices.
                   </p>
                 </div>
                 <div class="cardTechStack">
@@ -585,21 +581,16 @@
                 <div class="separator"></div>
                 <div class="cardBody">
                   <p>
-                    Implementación de hooks de React para una experiencia de
-                    compra fluida.
+                    UseState, UseEffect, useContext, useQuery and other hooks used to build the user Interface with ReactJs and Tailwind.
                   </p>
                   <p>
-                    Infraestructura robusta en el back-end con Node.js y
-                    Express.
+                    Robust infrastructure on the backend with Node.Js, Express and MongoDB.
                   </p>
                   <p>
-                    Integración de funciones esenciales como login,
-                    autenticación segura y envío de correos electrónicos en una
-                    estructura MVC.
+                    Register, login, mailing, password recovery and secure authentication with JWT through signed cookies. MVC structure and payment gateway with Stripe.
                   </p>
                   <p>
-                    Experiencia de compra sin complicaciones respaldada por
-                    MongoDB.
+                    Unit and functional testing. Documentation with Swagger.
                   </p>
                 </div>
                 <div class="cardTechStack">
@@ -830,19 +821,15 @@
               </div>
               <div class="project_textContent">
                 <div class="cardHeading">
-                  Landing page for Christmas entrepreneurship
+                  Landing Page for Sales
                 </div>
                 <div class="separator"></div>
                 <div class="cardBody">
                   <p>
-                    Descubre la magia de la navidad a través de mi último
-                    proyecto: una cautivadora landing page para venta de
-                    artículos navideños.
+                    Discover the Christmas magic through one of my latest projects: a pretty product sale landing page for the end of the year season.
                   </p>
                   <p>
-                    La página resalta la versatilidad y adaptabilidad al
-                    funcionar sin problemas en dispositivos móviles, tabletas y
-                    computadoras de escritorio.
+                    The landing page results in the versatility and adaptability to work seamlessly on mobile devices, tablets and desktops in order to be able to shop anywhere.
                   </p>
                 </div>
                 <div class="cardTechStack">
@@ -1044,10 +1031,10 @@
                 <div class="separator"></div>
                 <div class="cardBody lastChildCardBody">
                   <p>
-                    Calculadora de propina, diseñada con un enfoque
-                    'mobile-first', utilizando técnicas avanzadas como CSS Grid
-                    y Flexbox. Esta herramienta te permite calcular fácilmente
-                    la propina y el total de la cuenta por persona.
+                    Tip calculator, designed with focus on "mobile-first" using advanced techniques such as CSS Grid and Flexbox.
+                  </p>
+                  <p>
+                    This tool allows you to easily calculate the tips and the total amount of the bill per person.
                   </p>
                 </div>
                 <div class="cardTechStack">
@@ -1080,12 +1067,12 @@
         <form class="contactForm">
           <div class="frameForm1">
             <div class="inputBox">
-              <label for="name">Nombre</label>
+              <label for="name">Name</label>
               <input
                 type="text"
                 name="name"
                 id="name"
-                placeholder="Tu Nombre"
+                placeholder="Your Name"
                 required
               />
             </div>
@@ -1108,7 +1095,7 @@
                 id="message"
                 cols="30"
                 rows="10"
-                placeholder="Deja aqui tu mensaje"
+                placeholder="Leave your message here"
               ></textarea>
               <!-- <input
                 type="text"
