hover in last two projects adjusted (mobile)

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         />
                         <div class="projectDescription">
                           <div class="cardProjectLinks">
-                            <h3>Conoce el Proyecto</h3>
+                            <h3>Get to know the project</h3>
                             <div class="linksProject">
                               <!-- Link Github -->
                               <a
@@ -505,7 +505,7 @@
                         />
                         <div class="projectDescription">
                           <div class="cardProjectLinks">
-                            <h3>Conoce el Proyecto</h3>
+                            <h3>Get to know the project</h3>
                             <div class="linksProject">
                               <!-- Link Github -->
                               <a
@@ -750,9 +750,9 @@
                           src="src/assets/projects/clausDeliveryBags-mobile.png"
                           alt=""
                         />
-                        <div class="projectDescription">
+                        <div class="projectDescription projectDesc3">
                           <div class="cardProjectLinks">
-                            <h3>Conoce el Proyecto</h3>
+                            <h3>Get to know the project</h3>
                             <div class="linksProject">
                               <!-- Link Github -->
                               <a
@@ -957,9 +957,9 @@
                           src="src/assets/projects/tipCalculator-mobile.png"
                           alt=""
                         />
-                        <div class="projectDescription">
+                        <div class="projectDescription projectDesc4">
                           <div class="cardProjectLinks">
-                            <h3>Conoce el Proyecto</h3>
+                            <h3>Get to know the project</h3>
                             <div class="linksProject">
                               <!-- Link Github -->
                               <a
