hover in last two projects adjusted (mobile)

--- a/index.html
+++ b/index.html
@@ -498,12 +498,12 @@
                   <!-- For Iphone View -->
                   <div class="containerIphone">
                     <div id="project2" class="iphone-border">
-                      <div class="screen">
+                      <div class="screen screenProject2 ">
                         <img
                           src="src/assets/projects/ecomerce-mobile.png"
                           alt=""
                         />
-                        <div class="projectDescription">
+                        <div class="projectDescription projectDescription2">
                           <div class="cardProjectLinks">
                             <h3>Get to know the project</h3>
                             <div class="linksProject">
@@ -952,12 +952,12 @@
                   <!-- For Iphone View -->
                   <div class="containerIphone">
                     <div id="project4" class="iphone-border">
-                      <div class="screen">
+                      <div class="screen screenProject4">
                         <img
                           src="src/assets/projects/tipCalculator-mobile.png"
                           alt=""
                         />
-                        <div class="projectDescription projectDesc4">
+                        <div class="projectDescription projectDescription4">
                           <div class="cardProjectLinks">
                             <h3>Get to know the project</h3>
                             <div class="linksProject">
