adjust in screens of projects in mobile

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                   <!-- For Iphone View -->
                   <div class="containerIphone">
                     <div id="project1" class="iphone-border">
-                      <div class="screen">
+                      <div class="screen screenProject3">
                         <img
                           src="src/assets/projects/clausDeliveryBags-mobile.png"
                           alt=""
