new project added

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                           </div>
                           <div class="projectPage dock_imgContainer">
                             <a
-                              href="https://arenascode.github.io/ClausDeliveryBags/"
+                              href="https://www.clausbags.com"
                             >
                               <img
                                 src="src/assets/stack/sitio-web.png"
@@ -899,17 +899,41 @@
                               />
                             </a>
                           </div>
-                          <div class="js dock_imgContainer">
-                            <a href="https://www.javascript.com/">
+                          <div class="ts dock_imgContainer">
+                            <a href="https://www.typescriptlang.org/">
                               <img
-                                src="src/assets/stack/js.png"
-                                class="lunchpad img-size"
+                                src="src/assets/stack/ts.png"
+                                class="ts img-size"
+                              />
+                            </a>
+                          </div>
+                          <div class="react dock_imgContainer">
+                            <a href="https://react.dev/">
+                              <img
+                                src="src/assets/stack/react.png"
+                                class="react img-size"
+                              />
+                            </a>
+                          </div>
+                          <div class="nodeJs dock_imgContainer">
+                            <a href="https://nodejs.org/en">
+                              <img
+                                src="src/assets/stack/nodeJs.png"
+                                class="nodeJS img-size"
+                              />
+                            </a>
+                          </div>
+                          <div class="mysql dock_imgContainer">
+                            <a href="https://www.mysql.com/">
+                              <img
+                                src="src/assets/stack/mysql.png"
+                                class="img-size"
                               />
                             </a>
                           </div>
                           <div class="github dock_imgContainer">
                             <a
-                              href="https://github.com/arenascode/tipCalculator"
+                              href="https://github.com/arenascode/socialMediaClone-UI"
                             >
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -926,9 +950,7 @@
                             </a>
                           </div>
                           <div class="projectPage dock_imgContainer">
-                            <a
-                              href="https://arenascode.github.io/tipCalculator"
-                            >
+                            <a href="https://github.com/arenascode/socialMediaClone-UI">
                               <img
                                 src="src/assets/stack/sitio-web.png"
                                 alt=""
@@ -938,7 +960,7 @@
                           </div>
                         </div>
                         <img
-                          src="src/assets/projects/tipCalculator.png"
+                          src="src/assets/projects/socialMediaDesktop.png"
                           class="safari-window"
                           style="filter: opacity(0.8)"
                         />
@@ -954,7 +976,7 @@
                     <div id="project4" class="iphone-border">
                       <div class="screen screenProject4">
                         <img
-                          src="src/assets/projects/tipCalculator-mobile.png"
+                          src="src/assets/projects/SocialMediaMobile.png"
                           alt=""
                         />
                         <div class="projectDescription projectDescription4">
@@ -1027,15 +1049,15 @@
                 </div>
               </div>
               <div class="project_textContent">
-                <div class="cardHeading">Tip Calculator</div>
+                <div class="cardHeading">Social Media Clone</div>
                 <div class="separator"></div>
                 <div class="cardBody lastChildCardBody">
                   <p>
-                    Tip calculator, designed with focus on "mobile-first" using advanced techniques such as CSS Grid and Flexbox.
-                  </p>
-                  <p>
-                    This tool allows you to easily calculate the tips and the total amount of the bill per person.
-                  </p>
+  A fully-featured social media clone, built with a focus on user interaction and seamless functionality. 
+</p>
+<p>
+  This platform includes post creation, comments, likes, user profiles, and real-time chat, designed to deliver a smooth and engaging social experience.
+</p>
                 </div>
                 <div class="cardTechStack">
                   <h3>Built With</h3>
