cv for downloading added

--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@
           <a href="mailto:migue.arenas91@gmail.com">
             <img src="src/assets/icons/email.png" alt="email" />
           </a>
-          <a href="">
+          <a download href="src/assets/CV-MiguelArenas.pdf">
             <img src="src/assets/icons/curriculum-vitae.png" alt="cv" />
           </a>
         </div>
