links in last project changed

--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
                             <div class="linksProject">
                               <!-- Link Github -->
                               <a
-                                href="https://github.com/arenascode/tipCalculator"
+                                href="https://github.com/arenascode/socialMediaClone-UI"
                                 target="_blank"
                               >
                                 <svg
@@ -1003,7 +1003,7 @@
                               </a>
                               <!-- link page -->
                               <a
-                                href="https://arenascode.github.io/tipCalculator/"
+                                href="https://github.com/arenascode/socialMediaClone-UI"
                                 target="_blank"
                               >
                                 <svg
@@ -1035,11 +1035,15 @@
                                 alt="css-logo"
                               />
                               <img
-                                src="src/assets/stack/js.png"
+                                src="src/assets/stack/ts.png"
                                 alt=""
                                 height="30"
                                 width="30"
                               />
+                              <img src="src/assets/stack/react.png" />
+                              <img src="src/assets/stack/nodeJs.png" />
+                              <img src="src/assets/stack/mysql.png" />
+                              <img src="src/assets/stack/sass.png" />
                             </div>
                           </div>
                         </div>
