--- a/index.html
+++ b/index.html
@@ -4377,7 +4377,7 @@ body {
                             <div class="linksProject">
                               <!-- Link Github -->
                               <a
-                                href="https://github.com/arenascode/tipCalculator"
+                                href="https://github.com/arenascode/socialMediaClone-UI"
                                 target="_blank"
                               >
                                 <svg
@@ -4395,7 +4395,7 @@ body {
                               </a>
                               <!-- link page -->
                               <a
-                                href="https://arenascode.github.io/tipCalculator/"
+                                href="https://github.com/arenascode/socialMediaClone-UI"
                                 target="_blank"
                               >
                                 <svg
@@ -4427,11 +4427,15 @@ body {
                                 alt="css-logo"
                               />
                               <img
-                                src="https://arenascode.github.io/miguePortfolio/assets/js-30558d7e.png"
+                                src="https://arenascode.github.io/miguePortfolio/assets/ts-ec8c905f.png"
                                 alt=""
                                 height="30"
                                 width="30"
                               />
+                              <img src="https://arenascode.github.io/miguePortfolio/assets/react-9ea4f4da.png" />
+                              <img src="https://arenascode.github.io/miguePortfolio/assets/nodeJs-c310e885.png" />
+                              <img src="https://arenascode.github.io/miguePortfolio/assets/mysql-8dbe17e1.png" />
+                              <img src="https://arenascode.github.io/miguePortfolio/assets/sass-8cbb85c1.png" />
                             </div>
                           </div>
                         </div>
